@@ -3,6 +3,8 @@ Revision history for Perl distribution Music-Harmonica-Tabs
 0.02 - ??
  - Improve the sort order of the output
  - Add transposition support
+ - Simpler and more powerful handling of bends (that are generated, rather than
+   using separately defined tunings).
 
 0.01 - 2025-01-19
  - Initial release
